--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-{% for post in paginator.posts %}
+<!--{% for post in paginator.posts %}
 
 <article>
   <a href="{{ site.github.url }}{{ post.url }}">
@@ -13,10 +13,10 @@ title: Home
   </a>
 </article>
 
-{% endfor %}
+{% endfor %}-->
 
 <!-- Pagination links -->
-<div class="pagination">
+<!--<div class="pagination">
   {% if paginator.next_page %}
     <a class="pagination-button pagination-active next" href="{{ site.github.url }}{{ paginator.next_page_path }}">{{ site.data.settings.pagination.previous_page }}</a>
   {% else %}
@@ -28,4 +28,4 @@ title: Home
     {% else %}
       <span class="pagination-button">{{ site.data.settings.pagination.next_page }}</span>
   {% endif %}
-</div>
+</div>-->
