--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,9 +6,9 @@
   Site variables
 */
 
-$base-font-family: 'Times new Roman';
+$base-font-family: 'Cambria';
 
-$body-font-family: 'Times new Roman';
+$body-font-family: 'Cambria';
 
 $code-font-family: "Source Code Pro", monospace;
 
