--- a/assets/css/_sass/_social-icons.scss
+++ b/assets/css/_sass/_social-icons.scss
@@ -23,11 +23,13 @@ $rss-color: #ff6600;
 }
 
 .fa-envelope {
+  margin-right: 10px;
   padding: 5px;
   @include social-media-icon($envelope-color, $icon-transition-time);
 }
 
 .fa-twitter {
+  margin-right: 10px;
   padding: 5px;
   @include social-media-icon($twitter-color, $icon-transition-time);
 }
@@ -38,6 +40,7 @@ $rss-color: #ff6600;
 }
 
 .fa-github {
+  margin-right: 10px;
   padding: 5px;
   @include social-media-icon($github-color, $icon-transition-time);
 }
