--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@
 
 $base-font-family: 'Trebuchet MS';
 
-$body-font-family: 'Trebuchet MS';
+$body-font-family: 'Cambria';
 
 $code-font-family: "Source Code Pro", monospace;
 
