--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,10 +15,10 @@
     <button class="dropbtn"><i class="fa fa-bars" aria-hidden="true"></i></button>
     <div class="dropdown-content">
       {% for item in site.data.settings.menu %}
-        {% if item == 'Home' %}
-          <a href="{{ site.github.url }}/{{ item.file }}" class="menu-link">Home</a>
-        {% elif item == 'CV' %}
-          <a href="{{ site.github.url }}/cv-folder/{{ item.file }}" class="menu-link">CV</a>
+        {% if item.name == 'Home' %}
+          <a href="{{ site.github.url }}/{{ item.file }}" class="menu-link">{{ item.name }}</a>
+        {% elif item.name == 'CV' %}
+          <a href="{{ site.github.url }}/cv-folder/{{ item.file }}" class="menu-link">{{ item.name }}</a>
         {% else %}
           <a href="{{ site.github.url }}/pages/{{ item.file }}" class="menu-link">{{ item.name }}</a>
         {% endif %}
