--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,13 +15,7 @@
     <button class="dropbtn"><i class="fa fa-bars" aria-hidden="true"></i></button>
     <div class="dropdown-content">
       {% for item in site.data.settings.menu %}
-        {% if item.name == 'Home' %}
-          <a href="{{ site.github.url }}/{{ item.file }}" class="menu-link">{{ item.name }}</a>
-        {% if item.name == 'CV' %}
-          <a href="{{ site.github.url }}/cv-folder/{{ item.file }}" class="menu-link">{{ item.name }}</a>
-        {% else %}
-          <a href="{{ site.github.url }}/pages/{{ item.file }}" class="menu-link">{{ item.name }}</a>
-        {% endif %}
+        <a href="{{ site.github.url }}/{{ item.folder }}/{{ item.file }}" class="menu-link">{{ item.name }}</a>
       {% endfor %}
 
       {% for item in site.data.settings.social %}
