--- a/assets/css/_sass/_social-icons.scss
+++ b/assets/css/_sass/_social-icons.scss
@@ -79,3 +79,13 @@ $rss-color: #ff6600;
   padding: 5px;
   @include social-media-icon($rss-color, $icon-transition-time);
 }
+
+.fa-phone {
+  padding-right: 5px;
+  padding: 5px;
+}
+
+.fa-map-maker {
+  padding-right: 5px;
+  padding: 5px;
+}
