--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,15 @@
 layout: default
 title: Home
 ---
+<!-- <div class="page-title">
+  <h1>
+    {{ page.title }}
+  </h1>
+</div> -->
+
+<article>
+  {{ content }}
+</article>
 
 <!--{% for post in paginator.posts %}
 
