--- a/assets/css/_sass/_-sections-dir.scss
+++ b/assets/css/_sass/_-sections-dir.scss
@@ -7,5 +7,6 @@
         "header",
         "footer",
         "code",
+        "grid"
         "social-icons";
 // SCSS files roughly correspond to HTML files in _includes and _layouts
