--- a/_includes/_third-party/analytics/google-analytics.html
+++ b/_includes/_third-party/analytics/google-analytics.html
@@ -16,4 +16,7 @@
 
   gtag('config', 'G-JFLP6TKXPG');
 </script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8250947949888900"
+     crossorigin="anonymous"></script>
 {% endif %}
